app/assets/css/main.css
html, body {
  height: 100%;
  cursor: none;
  overflow-x: hidden;
  scrollbar-gutter: stable;
  background-color: rgb(248, 248, 248); /* Very light gray */
  color: #121212;
  font-family: var(--font-lato);
}

/* Force hide Nuxt UI default logo */
header a[href="https://ui.nuxt.com"] {
  display: none !important;
}

.page-enter-active,
.page-leave-active {
  transition: opacity 0.5s ease;
}
.page-enter-from,
.page-leave-to {
  opacity: 0;
}

@import "tailwindcss";

@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');

:root {
  --font-lato: 'Lato', sans-serif;
  --header-height: 45px;
  --main-padding: 20px;
}

@media (min-width: 768px) {
  :root {
    --main-padding: 10%;
  }
}

@media (min-width: 1280px) {
  :root {
    --main-padding: 18.5%;
  }
}

.main-container {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: var(--main-padding);
  padding-right: var(--main-padding);
}

#wrapper {
  position: relative;
  min-height: 100%;
  margin-bottom: -40px;
}

